# aws-generativeai-partner-samples

./: .gitignore  .gitmodules  README.md
aerospike/: README.md
aerospike/samples/: avs_bedrock_integration.ipynb
agentcore-strands-playground/: .gitignore  README.md  agentcore_playground.md  app.py  auth_utils.py  br_utils.py  cleanup.py  config.py  dotenv.example  pyproject.toml  utils.py
agentcore-strands-playground/agentcore_agent/: requirements.txt  runtime_agent.py
anthropic/: README.md
anthropic/samples/: claude-bedrock-boto3-multimodal.ipynb  claude-bedrock-boto3-text.ipynb  claude-bedrock-langchain-eval-string-criteria.ipynb  (+9 more)
boundaryml/: .gitignore  README.md  nova_act_baml.py  nova_act_pydantic.py
common/metadata-intelligence/: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt  test_agentcore.py
common/metadata-intelligence/cdk/: app.py  aurora_opensearch_stack.py  cdk.json  requirements.txt
common/metadata-intelligence/src/orchestrator/: __init__.py  agent.py  aurora_agent.py  config.py  executor.py  metadata_analyzer.py  models.py  opensearch_agent.py  planner.py  s3tables_agent.py  ui.py
common/metadata-intelligence/src/sources/: __init__.py  base.py
common/metadata-intelligence/src/sources/aurora/: __init__.py  connection.py  schema_provider.py  source.py  sql_generator.py
common/metadata-intelligence/src/sources/opensearch/: __init__.py  client.py  source.py
common/metadata-intelligence/src/sources/s3tables/: __init__.py  source.py
datadog/: README.md
dynatrace/: README.md
dynatrace/solutions/: README.md
elastic/: README.md
meta/: .gitignore  README.md
mongodb/: README.md  prepare_data.py  requirements.txt  run_model.py
paig/: README.md
snowflake/mcp/fraud-analysis-mcp-implementation/mcp-servers/mcp-snowflake-server/: .env  Dockerfile  README.md  pyproject.toml
snowflake/mcp/fraud-analysis-mcp-implementation/mcp-servers/mcp-snowflake-server/src/mcp_snowflake_server/: server_run.py
splunk/: LICENSE.txt  README.md  Splunk_bedrock_agent.ipynb  Splunk_secrets.ipynb
splunk/mcp/: README.md  main.py  pyproject.toml  requirements.txt  splunk_client.py
splunk/mcp/server/: .env  README.md  pyproject.toml  requirements.txt  splunk-server.py
splunk/mcp/server/dependencies/: .env  README.md  aoss-vector-db.py  create-splunk-secrets.py  main.py  process-vector-db.py  pyproject.toml  requirements.txt  test-vector-db.py
splunk/mcp/server/dependencies/data/: aws-source-types.csv
tidb/: README.md
veeam/: README.md  mcp_settings.json  pyproject.toml  requirements.txt
(+505 files in other folders)
